Bug 200646 - ksysguard gui is not showing the process list on Solaris
Summary: ksysguard gui is not showing the process list on Solaris
Status: RESOLVED FIXED
Alias: None
Product: ksysguard
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Solaris
: NOR normal
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-07-18 14:20 UTC by Jan Hnatek
Modified: 2010-04-28 11:39 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
patch (43.06 KB, patch)
2009-10-02 00:17 UTC, tropikhajma
Details
Updated patch to fix Swap and CPU load reporting (43.06 KB, patch)
2009-10-02 07:45 UTC, Moinak Ghosh
Details
ksysguard Solaris patch 1 (31.21 KB, patch)
2010-04-24 23:14 UTC, Jan Hnatek
Details
ksysguard Solaris patch 2 (27.04 KB, patch)
2010-04-24 23:14 UTC, Jan Hnatek
Details
ksysguard Solaris patch 2 (28.05 KB, patch)
2010-04-24 23:35 UTC, Jan Hnatek
Details
updates cpu/network sensors (3.68 KB, patch)
2010-04-25 20:17 UTC, Jan Hnatek
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Hnatek 2009-07-18 14:20:28 UTC
Version:            (using KDE 4.2.96)
Compiler:          Sun Studio 12 
OS:                Solaris
Installed from:    Compiled From Sources

On OpenSolaris, the ksysguard process list is empty. Running a few checks, the ksysguardd has only a few monitors enabled. May be build problem.

ksysguardd> monitors
mem/swap/free   integer
mem/swap/used   integer
pscount integer
ps      table

ksysguardd>  ps?
Name    PID     PPID    GID     Status  User    Threads Size    Resident        % CPU   Priority        Command
s       d       d       d       s       s       d       D       D       f       d       s
Comment 1 tropikhajma 2009-10-02 00:17:32 UTC
Created attachment 37309 [details]
patch

This is a patch that was tested to work on OpenSolaris b121. In some parts #ifdef Q_OS_SOLARIS is missing and should be added to not break other OSes.
Author of the patch is Moinak Ghosh and the patch was taken from here: http://belenix.svn.sourceforge.net/viewvc/belenix/trunk/spec_files/kde4/patches/kdebase-workspace-18-ksysguard.diff?view=log
Comment 2 Moinak Ghosh 2009-10-02 07:45:06 UTC
Created attachment 37317 [details]
Updated patch to fix Swap and CPU load reporting
Comment 3 Moinak Ghosh 2009-10-02 07:50:27 UTC
I have attached an updated patch. However the trouble is with the ReniceDlgUI.ui file since the current patch breaks it for Linux. I think that file should be platform-specific.
In addition more updates to ksysguardd for OpenSolaris are coming that will implement additional monitors.
Comment 4 John Tapsell 2009-10-02 09:41:28 UTC
Hi Moinak,

  Looks good.  If you promise to not break the other OSes, then you
can commit directly if you have an svn account.  No breaking the
renice dialog on linux though please!

John
Comment 5 Moinak Ghosh 2009-10-02 11:41:08 UTC
As it stands now the patch requires more work to avoid breaking on Linux. That is deliver a separate Renice dialog for Solaris. A couple of items in the patch are however generic, for eg. some qlonglong members of the Process class are being assigned to long variables, that I changed to qlonglong.
Anyway I will make additional changes and check it, probably against Fedora.
Comment 6 John Tapsell 2009-10-02 11:59:44 UTC
> As it stands now the patch requires more work to avoid breaking on Linux. That
> is deliver a separate Renice dialog for Solaris.

Or just disable the renice dialog for Solaris.  better to have it
mostly than working than not working at all, or working with
regressions.

> A couple of items in the patch
> are however generic, for eg. some qlonglong members of the Process class are
> being assigned to long variables, that I changed to qlonglong.

Could you commit this seperately please?  I have a few bug reports
about negative memory being reported - presumably because of qlonglong
to long  conversions.

> Anyway I will make additional changes and check it, probably against Fedora.

Thank you!
Comment 7 John Tapsell 2009-12-11 13:59:45 UTC
Anything more on this?
Comment 8 Jan Hnatek 2009-12-22 23:36:03 UTC
This works now on the build I'm using, which is 4.3.2. I believe you can close this. Thanks all who participated on the fix.
Comment 9 Moinak Ghosh 2009-12-23 14:07:06 UTC
Was this commited to trunk ? Apologize for not getting any time earlier. I am only getting around to this now.
Comment 10 Jan Hnatek 2010-04-24 23:14:16 UTC
Created attachment 43015 [details]
ksysguard Solaris patch 1
Comment 11 Jan Hnatek 2010-04-24 23:14:41 UTC
Created attachment 43016 [details]
ksysguard Solaris patch 2
Comment 12 Jan Hnatek 2010-04-24 23:16:16 UTC
(In reply to comment #9)
> Was this commited to trunk ? Apologize for not getting any time earlier. I am
> only getting around to this now.

Sorry, of course not, my confusion.

(In reply to comment #7)
> Anything more on this?

I updated Moinak's patch for 4.4.2 and added some branching for Solaris, so that Linux ReniceDlgUi isn't touched. Attached the changes that are separated to 2 files - one with Solaris-specific files and the rest.
Would be good if someone takes a look at ti and commits if ok (I don't have an svn account).

Thanks,
hnhn
Comment 13 Jan Hnatek 2010-04-24 23:35:21 UTC
Created attachment 43017 [details]
ksysguard Solaris patch 2

forgot one change block
Comment 14 Jan Hnatek 2010-04-25 20:17:24 UTC
Created attachment 43027 [details]
updates cpu/network sensors
Comment 15 John Tapsell 2010-04-27 23:09:39 UTC
SVN commit 1119875 by johnflux:

Add solaris support to the Renice dialog, supporting the Interactive scheduler

BUG:200646

 M  +1 -0      processcore/process.cpp  
 M  +1 -1      processcore/process.h  
 M  +1 -1      processcore/processes_solaris_p.cpp  
 M  +3 -0      processui/ProcessModel.cc  
 M  +6 -1      processui/ReniceDlg.cc  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1119875
Comment 16 John Tapsell 2010-04-27 23:11:52 UTC
I've applied:
   ksysguard Solaris patch 1
   updates cpu/network sensors 

And wrote a patch based on:
    ksysguard Solaris patch 2

And this is now committed.  Please check this on Solaris!

I added a new cpu class 'Interactive' instead of reusing the Batch enum. 
There's a comment about how to support RoundRobbin etc on solaris.  Please
instead just add new enums for the cpu classes that you do support
Comment 17 John Tapsell 2010-04-27 23:33:31 UTC
I backported all the commits except the renice dialog string changes to KDE 4.4.  Please check this quickly if you want to fix any mistakes before 4.4.3 is tagged.
Comment 18 Jan Hnatek 2010-04-28 10:46:50 UTC
Thanks John.
Any chance you could add attribution to Moinak? ~90% of this code is his...
Comment 19 John Tapsell 2010-04-28 11:39:43 UTC
On 28 April 2010 17:46, Jan Hnatek <jan.hnatek@sun.com> wrote:
> https://bugs.kde.org/show_bug.cgi?id=200646
>
>
>
>
>
> --- Comment #18 from Jan Hnatek <jan hnatek sun com>  2010-04-28 10:46:50 ---
> Thanks John.
> Any chance you could add attribution to Moinak? ~90% of this code is his...


Sorry, I already committed :-/

If you check it over and come up with bug fixes, I'll attribute him there.