Add solaris support to the Renice dialog, supporting the Interactive scheduler

BUG:200646

svn path=/trunk/KDE/kdebase/workspace/; revision=1119875